--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^2.2.3
   get: ^4.7.3
   pin_code_fields: ^8.0.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
